 7. Fix line-style group box when text is above or below the line.
 8. Fix crash when using a tiled image for background appearance, but not for menu
    appearance - was using wrong config item!
 9. Fix border of hovered treeview items.
10. Allow combo popupmenus to be rounded if not using compositing.
11. Set/clear widget masks when compositing toggled.
12. Fix treeview line end detection.
13. Fix size of fonts in GIMPs dock.

1.7.1
-----
1. Use rgba colormap to draw rounded tooltips and popup menus - gives nicer border.
   This may be disabled via KDE4 config dialog.
2. Allow 'menus' of non-editable combos to be rounded. (But *only* if the app can
   be set to use an rgba colormap)
3. Remove resize grips - kwin handles this.
4. Add mouse tracking to treeview lists.
5. Indent treeview selection as per KDE.
6. Dont use GtkStyle to draw treeview lines. Use custom code which matches previous
   KDE 'old' style.
7. When loading images for background/menus - check that image was loaded before
   attempting to ascertain its width/height.
8. Fix drawing or progressbar groove in treeview.

1.7.0
-----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
 3. Use popup menu gradient's border setting to determine border type of menus.
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
 6. If not rounding, enable all 'square' options.
 7. Store background colour setting in XProperty - so that this can be used by
    QtCurve kwin decoration. (At the moment, this is just the palette background)
 8. Add position setting for background image; top left, top middle, top right,
    bottom left, bottom middle, bottom right, left middle, right middle, and centred.
 9. Use square tooltips by default. (Problems have been reported with Pidgin and
    rounded tooltip - but I cannot reproduce these!)